new: link to GPL

--- a/source/converter.html
+++ b/source/converter.html
@@ -46,6 +46,7 @@
 				<li><a href="options.html">Options</a></li>	
 				<li><a href="converter.html">Currency Converter</a></li>		
 				<li><a href="http://currencyrate.tumblr.com/submit">Online Support</a></li>
+				<li><a href="COPYING">GPL license</a></li>
 			</ul>
 		</nav>
 		<div id="page">
@@ -59,7 +60,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<label for="money">Amount: </label>
 					<input type="number" 
-						min="15" 
+						min="1" 
 						value="1" 
 						name="money" 
 						id="money" 
