--- a/source/options.html
+++ b/source/options.html
@@ -27,7 +27,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Options: Instant Currency Rates</title>
-	<link rel="stylesheet" href="css/options.css" />
+	<link href="css/options.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="js/options.js"></script>	
 </head>
 <body>
@@ -44,6 +44,7 @@
 				<li><a href="options.html">Options</a></li>	
 				<li><a href="converter.html">Currency Converter</a></li>		
 				<li><a href="http://currencyrate.tumblr.com/submit">Online Support</a></li>
+				<li><a href="COPYING">GPL license</a></li>
 			</ul>
 		</nav>
 		<div id="page">
