--- a/source/converter.html
+++ b/source/converter.html
@@ -119,11 +119,9 @@
 						<option value="DJF">DJF - Dijibouti Franc</option>
 						<option value="DOP">DOP - Dominican Peso</option>
 						<option value="XCD">XCD - East Caribbean Dollar</option>
-						<option value="ECS">ECS - Ecuador Sucre</option>
 						<option value="EGP">EGP - Egyptian Pound</option>
 						<option value="SVC">SVC - El Salvador Colon</option>
 						<option value="ERN">ERN - Eritrea Nakfa</option>
-						<option value="EEK">EEK - Estonian Kroon</option>
 						<option value="ETB">ETB - Ethiopian Birr</option>
 						<option value="FKP">FKP - Falkland Islands Pound</option>
 						<option value="FJD">FJD - Fiji Dollar</option>
@@ -224,6 +222,7 @@
 						<option value="YER">YER - Yemen Riyal</option>
 						<option value="ZMK">ZMK - Zambian Kwacha</option>
 						<option value="ZWD">ZWD - Zimbabwe dollar</option>
+						<option value="RSD">RSD - Serbian Dinar</option>
 					</select>
 					<span id="swap">
 						<!-- swap.png icon credit -http://yummygum.com/ -->
@@ -278,11 +277,9 @@
 						<option value="DJF">DJF - Dijibouti Franc</option>
 						<option value="DOP">DOP - Dominican Peso</option>
 						<option value="XCD">XCD - East Caribbean Dollar</option>
-						<option value="ECS">ECS - Ecuador Sucre</option>
 						<option value="EGP">EGP - Egyptian Pound</option>
 						<option value="SVC">SVC - El Salvador Colon</option>
 						<option value="ERN">ERN - Eritrea Nakfa</option>
-						<option value="EEK">EEK - Estonian Kroon</option>
 						<option value="ETB">ETB - Ethiopian Birr</option>
 						<option value="FKP">FKP - Falkland Islands Pound</option>
 						<option value="FJD">FJD - Fiji Dollar</option>
@@ -383,6 +380,7 @@
 						<option value="YER">YER - Yemen Riyal</option>
 						<option value="ZMK">ZMK - Zambian Kwacha</option>
 						<option value="ZWD">ZWD - Zimbabwe dollar</option>
+						<option value="RSD">RSD - Serbian Dinar</option>
 					</select>
 					<input type="button" id="add" value="Add Pair" />
 				</div>	
