add: AZN to currency list

--- a/source/converter.html
+++ b/source/converter.html
@@ -88,6 +88,7 @@
 						<option value="XAL">XAL - Aluminium Ounces</option>
 						<option value="ARS">ARS - Argentine Peso</option>
 						<option value="AWG">AWG - Aruba Florin</option>
+						<option value="AZN">AZN - Azerbaijani New Manat</option>
 						<option value="BSD">BSD - Bahamian Dollar</option>
 						<option value="BHD">BHD - Bahraini Dinar</option>
 						<option value="BDT">BDT - Bangladesh Taka</option>
@@ -246,6 +247,7 @@
 						<option value="XAL">XAL - Aluminium Ounces</option>
 						<option value="ARS">ARS - Argentine Peso</option>
 						<option value="AWG">AWG - Aruba Florin</option>
+						<option value="AZN">AZN - Azerbaijani New Manat</option>						
 						<option value="BSD">BSD - Bahamian Dollar</option>
 						<option value="BHD">BHD - Bahraini Dinar</option>
 						<option value="BDT">BDT - Bangladesh Taka</option>
