--- a/source/options.html
+++ b/source/options.html
@@ -75,6 +75,7 @@
 					<option value="XAL">XAL - Aluminium Ounces</option>
 					<option value="ARS">ARS - Argentine Peso</option>
 					<option value="AWG">AWG - Aruba Florin</option>
+					<option value="AZN">AZN - Azerbaijani New Manat</option>					
 					<option value="BSD">BSD - Bahamian Dollar</option>
 					<option value="BHD">BHD - Bahraini Dinar</option>
 					<option value="BDT">BDT - Bangladesh Taka</option>
@@ -233,6 +234,7 @@
 					<option value="XAL">XAL - Aluminium Ounces</option>
 					<option value="ARS">ARS - Argentine Peso</option>
 					<option value="AWG">AWG - Aruba Florin</option>
+					<option value="AZN">AZN - Azerbaijani New Manat</option>					
 					<option value="BSD">BSD - Bahamian Dollar</option>
 					<option value="BHD">BHD - Bahraini Dinar</option>
 					<option value="BDT">BDT - Bangladesh Taka</option>
