--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
 	currency exchange rates in an Opera Speed Dial. (Note: This version 
 	of the extension is for Opera - Chromium / Blink build.)
 	
-    Copyright (C) 2012 - 2013 M Shabeer Ali
+    Copyright (C) 2012 - 2014 M Shabeer Ali
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -22,7 +22,7 @@
 	
 	Website: http://currencyrate.tumblr.com/
 	Source code: https://github.com/thewebdev/opera-blink-extension-icr.git 
-	Email: thewebdev@myopera.com
+	Email: thewebdev@yandex.com
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
