--- a/source/options.html
+++ b/source/options.html
@@ -4,7 +4,7 @@
 	is an Opera extension that lets you view updates to the latest 
 	currency exchange rates in an Opera Speed Dial.
 	
-    Copyright (C) 2012 - 2013 M Shabeer Ali
+    Copyright (C) 2012 - 2014 M Shabeer Ali
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -21,7 +21,7 @@
 	
 	Website: http://currencyrate.tumblr.com/
 	Source code: https://github.com/thewebdev/opera-extension-icr.git 
-	Email: thewebdev@myopera.com
+	Email: thewebdev@yandex.com
 -->
 <html lang="en">
 <head>
